# DSTR

./: .gitignore  CMakeLists.txt  README.md
doc/: code-reqs.md  code-style.md  requirements.md
doc/tasks/: 04132026_2342.md  04142026_1724.md  04162026_2310
src/: Source.cpp  headers.h
src/array/: Array.cpp  Array.h  Dynamic_Array.cpp  array.cpp  array.h  array.inl
src/cli/: app_state.h  cli.cpp  cli.h
src/common/: aliases.h  common.h  enums.h  math.h  resident.h  result.h  string_helpers.h  strings.h  time.h
src/common/strings/: cli.h  errors.h  list.h  path.h
src/files/: files.cpp  files.h
src/list/: list.cpp  list.h  list.inl
